--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <label for="name-mentor">
               Nome do seu mentor <span>(só o primeiro nome)</span>
             </label>
-            <input type="password" name="" id="name-mentor">
+            <input type="text" name="" id="name-mentor">
           </div>
         </div>
       </fieldset>
